force-app/main/default/objects/Sales_Engineering_Queue_Snapshot__c/Sales_Engineering_Queue_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Sales Engineering Queue Snapshot</label>
    <nameField>
        <label>Sales Engineering Queue Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Engineering Queue Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>