force-app/main/default/objects/Sales_Engineering_Queue_Snapshot__c/fields/Requesting_Employee__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Employee__c</fullName>
    <label>Requesting Employee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>