force-app/main/default/objects/Sales_Engineering_Queue_Snapshot__c/fields/Services_SOW_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Services_SOW_Created_Date__c</fullName>
    <label>Services SOW: Created Date</label>
    <type>Date</type>
</CustomField>